# DeepDiagram

./: .gitignore  PRD.md  README.md  README_CN.md  docker-compose.yml  website-architecture.md
.github/workflows/: docker-build-push.yml
backend/: .env.example  pyproject.toml  start_backend.sh  test_sse.py
backend/app/: main.py
backend/app/agents/: charts.py  dispatcher.py  drawio.py  flow.py  general.py  graph.py  infographic.py  mermaid.py  mindmap.py
backend/app/api/: routes.py
backend/app/core/: config.py  context.py  database.py  llm.py
backend/app/models/: chat.py  user.py
backend/app/services/: auth.py  chat.py
backend/app/state/: state.py
backend/migrations/: 001_add_turn_index_to_chatmessage.sql  002_add_files_to_chatmessage.sql  003_add_file_context_to_chatmessage.sql  005_create_users_table.sql  006_add_user_id_to_chatsession.sql
frontend/: .env.example  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/public/: robots.txt  sitemap.xml
frontend/src/: App.tsx  index.css
frontend/src/components/: CanvasPanel.tsx  ChatPanel.tsx  ExecutionTrace.tsx
frontend/src/lib/: utils.ts
frontend/src/store/: canvasState.ts  chatStore.ts  userStore.ts
frontend/src/types/: google.d.ts  index.ts
nginx/: nginx.conf
website/: DEPLOYMENT.md  Dockerfile  next.config.ts  package-lock.json  package.json  tsconfig.json
website/src/: middleware.ts
website/src/app/: layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
website/src/lib/: utils.ts
website/src/messages/: en.json  zh.json
(+55 files in other folders)
